--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Nathan Parr</title>
 </head>
 <body>
-    
+    <h1>Hello There!</h1>
+    <p>Welcome to my webpage!</p>
 </body>
 </html>
