--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/styles.css" rel="stylesheet" />
-    <title>Nathan Parr</title>
+    <title>nathanparr</title>
 </head>
 <body>
     <h1>Hello There!</h1>
