--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link href="styles/styles.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSV Parsing with Papa Parse</title>
 </head>
 <body>
@@ -10,32 +11,38 @@
     <p>Welcome to my webpage!</p>
   </header>
   <nav class="topnav">
-    <a href="#app">CW Cal</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="cwCal.html">CW Cal</a>
   </nav>
 
   <section id="appFrame">
-  <input type="file" id="csvFileInput">
+  
   
   <form id="frm1">
     <br>
-    <label for="fname">Item Number:</label><br>
-    <input type="text" id="fname" name="fname" value="2113015909601" required><br><br>
-    <label for="lname">Case Difference:</label><br>
+    <label for="fname">First Name</label><br>
+    <input type="text" id="fname" name="fname"><br><br>
+    <label for="lname">Last Name</label><br>
     <input type="text" id="lname" name="lname"><br><br>
-    <input type="radio" id="addtionSel" name="select" value="add">
-    <label for="addtionSel">Adding Cases</label>
-    <input type="radio" id="subSel" name="select" value="sub">
-    <label for="subSel">Removing Cases</label>
+    
 
 
   </form>
   <br>
 
-  <button onclick="calAvg()">Average</button>
+  <p id="demo" style="
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto;"><br></p>
+
+  <button onclick="frmTest1()" 
+    style="
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;"
+    >Submit</button>
   
-  <p id="test"></p>
-  <button onclick="totalCatch()">Total</button>
-  <p id="demo"></p>
+  
   </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <script src="scripts/cwScript.js"></script>
