--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <link href="styles/styles.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSV Parsing with Papa Parse</title>
+  <title>Nate Website</title>
 </head>
 <body>
   <header id="myHead">
     <h1>Hello There!</h1>
-    <p>Welcome to my webpage!</p>
+    
   </header>
   <nav class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="cwCal.html">CW Cal</a>
   </nav>
-
+  <section id="myHead">
+    <p>Welcome to my webpage!</p>
+  </section>section>
   <section id="appFrame">
   
   
@@ -30,10 +32,7 @@
   </form>
   <br>
 
-  <p id="demo" style="
-  display: block; 
-  margin-left: auto; 
-  margin-right: auto;"><br></p>
+  <p id="demo" style="text-align: center;"><br></p>
 
   <button onclick="frmTest1()" 
     style="
