--- a/cwCal.html
+++ b/cwCal.html
@@ -3,20 +3,21 @@
 <head>
   <link href="styles/styles.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSV Parsing with Papa Parse</title>
+  <title>CW Calculator</title>
 </head>
 <body>
   <header id="myHead">
     <h1>Catch Weight Calculator</h1>
-    <p>Simple Catch Weight Calculator for getting average item weights in kg. <br><br>
-      Select a file and then enter the total cases you are working with. <br>
-      Click average to get your average and total for total cacht weight. <br></p>
   </header>
   <nav class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="cwCal.html">CW Cal</a>
   </nav>
-
+  <section id="myHead">
+    <p>Simple Catch Weight Calculator for getting average item weights in kg. <br><br>
+      Select a file and then enter the total cases you are working with. <br>
+      Click average to get your average and total for total cacht weight. <br></p>
+  </section>
   <section id="appFrame">
     <input type="file" id="csvFileInput">
     
