--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
   <header id="myHead">
     <h1>Hello There!</h1>
-    
   </header>
   <nav class="topnav">
     <a class="active" href="index.html">Home</a>
@@ -17,6 +16,7 @@
   <section id="myHead">
     <p>Welcome to my webpage!</p>
   </section>section>
+
   <section id="appFrame">
   
   
@@ -32,7 +32,7 @@
   </form>
   <br>
 
-  <p id="demo" style="text-align: center;"><br></p>
+  <p id="demo" style="text-align: center;"><br></p> 
 
   <button onclick="frmTest1()" 
     style="
@@ -43,6 +43,9 @@
   
   
   </section>
+  <footer>
+    <p id="time"></p>
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <script src="scripts/cwScript.js"></script>
 </body>
