--- a/cwCal.html
+++ b/cwCal.html
@@ -43,7 +43,10 @@
     <button onclick="totalCatch()">Total</button>
 
   </section>
-  <p id="demo"></p>
+  <footer>
+    <p id="time"></p>
+  </footer>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <script src="scripts/cwScript.js"></script>
 </body>
