--- a/cwCal.html
+++ b/cwCal.html
@@ -10,7 +10,7 @@
     <h1>Catch Weight Calculator</h1>
   </header>
   <nav class="topnav">
-    <a class="active" href="index.html">Home</a>
+    <a class="active" href="https://nathanparr.net/">Home</a>
     <a href="cwCal.html">CW Cal</a>
   </nav>
   <section id="myHead">
