--- a/cwCal.html
+++ b/cwCal.html
@@ -11,7 +11,7 @@
   </header>
   <nav class="topnav">
     <a class="active" href="https://nathanparr.net/">Home</a>
-    <a href="cwCal.html">CW Cal</a>
+    <a href="cwCal">CW Cal</a>
   </nav>
   <section id="myHead">
     <p>Simple Catch Weight Calculator for getting average item weights in kg. <br><br>
