--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       <article>
         <h1 style="text-align: center;">Now</h1>
         <p>
-          My dream is to become a software developer. I enjoy frontend work and hope to see myself start there. If I end up doing backend development that is fine too. I like to learn new things everyday and want to keep learning. I am ready to start a new career.
+          My dream is to become a software developer. I enjoy frontend work and hope to see myself start there. If I end up doing backend development that would be great too! 
+          I like to learn new things everyday and want to keep learning. I am ready to start a new career.
           I currently practice my HTML, CSS and JavaScrip with this static website. I am also catching up on my PHP.
         </p>
       </article>
