--- a/dice.html
+++ b/dice.html
@@ -9,8 +9,11 @@
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
 <body>
-    <nav>
-
+    <nav class="topnav">  
+        <a class="active" href="https://nathanparr.net">Bio</a>
+        <a href="cwCal.html">CW Cal</a>
+        <a href="#">Dice</a>
+        <a href="#">Projects</a>
     </nav>
     <section>
         
