--- a/dice.html
+++ b/dice.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title1">Life</title>
     
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles/styles2.css">
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 </head>
 <body>
     <nav class="topnav">  
         <a class="active" href="https://nathanparr.net">Bio</a>
         <a href="cwCal.html">CW Cal</a>
-        <a href="#">Dice</a>
+        <a href="dice.html">Dice</a>
         <a href="#">Projects</a>
     </nav>
     <section>
