--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="topnav">
     <a class="active" href="https://nathanparr.net">Bio</a>
     <a href="cwCal.html">CW Cal</a>
-    <a href="#">Dice</a>
+    <a href="dice.html">Dice</a>
     <a href="#">Projects</a>
   </nav>
     <section class="bio1">
