--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="bio1">
 
       <article style="text-align: center; margin-top: 40px;">
-        <img id="profile_picture" src="images/profile_picture.jpg" alt="Me">
+        <img id="profile_picture" src="#" alt="Me">
         <h2>Nathan Parr</h2>
         <div id="myModal" class="modal">
           <span class="close">&times;</span>
