--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="styles/styles.css" rel="stylesheet" />
   <link href="styles/styles1.css" rel="stylesheet" />
   <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-  <title>Nate Website</title>
+  <title>NP Site</title>
 </head>
 <body>
   <header id="myHead">
@@ -75,7 +75,7 @@
     </section>
   
   <footer>
-    <p id="time"></p>
+    <p id="#"></p>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
