--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
         <p>
 
-          I hope You like it.
+          I hope you like it.
         </p>
         
 
@@ -66,7 +66,7 @@
     <section class="bio1">
       <article>
         <h1 style="text-align: center;">Now</h1>
-        <p>I use my computer programming skills to be more effiecient in each roll I do.</p>
+        <p>I use my computer programming skills to be more efficient in each roll I do.</p>
       </article>
     </section>
 
